--- a/SPM_Demo/Info.plist
+++ b/SPM_Demo/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb346390519910177</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>346390519910177</string>
+    <key>FacebookDisplayName</key>
+    <string>SPM_Demo</string>
+    
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
